pdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pdb
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginx-pdb
  template:
    metadata:
      labels:
        app: nginx-pdb
    spec:
      containers:
      - name: nginx-pdb
        image: nginx:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
