headless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headless-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: headless-app
  template:
    metadata:
      labels:
        app: headless-app
    spec:
      containers:
      - name: headless-nginx
        image: nginx:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: headless-svc
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: headless-app
  ports:
  - port: 80
    targetPort: 80
