liveness-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: liveness-app
spec:
  selector:
    matchLabels:
      app: liveness-app
  template:
    metadata:
      labels:
        app: liveness-app
    spec:
      containers:
      - name: liveness-app
        image: rahadiangg/k8s-etc:liveness
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          failureThreshold: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: liveness-app
spec:
  selector:
    app: liveness-app
  ports:
  - port: 8080
    targetPort: 8080
