readiness-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readiness-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: readiness-app
  template:
    metadata:
      labels:
        app: readiness-app
    spec:
      containers:
      - name: nginx-raw
        image: nginx:latest
        resources:
          requests:
            memory: "28Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 30
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: readiness-svc
spec:
  selector:
    app: readiness-app
  ports:
  - port: 80
    targetPort: 80
