ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: https
spec:
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx:latest
        resources:
          requests:
            memory: "28Mi"
            cpu: "20m"
          limits:
            memory: "128Mi"
            cpu: "50m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: https
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app.kubernetes.io/name: nginx-ingress
  namespace: https
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - hosts:
      - k8s4life.space
      secretName: k8s4life
  rules:
  - host: k8s4life.space
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
