readiness-probes-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readiness-hpa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: readiness-hpa
  template:
    metadata:
      labels:
        app: readiness-hpa
    spec:
      containers:
      - name: nginx-raw
        image: nginx:latest
        resources:
          requests:
            memory: "28Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "20m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 30
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: readiness-svc
spec:
  selector:
    app: readiness-hpa
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readiness-ingress
  labels:
    app.kubernetes.io/name: readiness-ingress
spec:
  rules:
  - host: belajark8s.info
    http:
      paths:
      - pathType: Prefix
        path: "/hello"
        backend:
          service:
            name: readiness-svc
            port: 
              number: 80
